[package]
name = "cronwind"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
cron = "0.15"
notify = "6"
log = "0.4"
fern = "0.6"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
daemonize = "0.5"
ctrlc = "3.4"